# Floating-Patmos

./: .gitignore
patmos/: a.s  hello.c  hello.s  isatests.py  isatests.sh
patmos/asm/: uartTest.s
patmos/asm-tests/: uartForTests.s
patmos/asm-tests/ISASim/: CMakeLists.txt
patmos/asm-tests/ISASim/ISASim/: CMakeLists.txt  ISASim.cpp  ISASim.h
patmos/asm-tests/ISATestsGen/: CMakeLists.txt
patmos/asm-tests/ISATestsGen/ISATestsGen/: CMakeLists.txt  ISATestsGen.cpp  ISATestsGen.h  common.cpp  common.h  float-csr.cpp  float-csr.h  instruction-formats.cpp  instruction-formats.h  register.cpp  register.h  tester.cpp  tester.h
patmos/hardware/: Makefile  emulator.cpp
patmos/hardware/config/: altde2-115.xml
patmos/hardware/src/main/scala/berk-float-1.2.4/: CompareRecFN.scala  DivSqrtRecFN_small.scala  INToRecFN.scala  MulAddRecFN.scala  RecFNToIN.scala  classifyRecFN.scala  rawFloatFromFN.scala
patmos/hardware/src/main/scala/patmos/: Constants.scala  Decode.scala  Execute.scala  Fetch.scala  Memory.scala  Patmos.scala  connections.scala
patmos/hardware/src/main/scala/patmos/FPU/: Fpu.scala
patmos/simulator/include/: assembler.h  basic-types.h  binary-formats.h  instruction.h  instructions.h  registers.h
patmos/simulator/src/: assembler.cc  binary-formats.cc  instruction.cc  instructions.inc
